# snakemake-utils

example/: pyproject.toml  snakefile  test.py
example/.snakemake/metadata/: b3V0cHV0L2xpbnQubG9n  b3V0cHV0L3B5dGhvbi5qc29u  b3V0cHV0L3B5dGhvbl83Lmpzb24=  b3V0cHV0L3B5dGhvbl84Lmpzb24=  b3V0cHV0L3B5dGhvbl85Lmpzb24=  b3V0cHV0L3B5dGhvbl8wLmpzb24=  b3V0cHV0L3B5dGhvbl8xLmpzb24=  b3V0cHV0L3B5dGhvbl8xMC5qc29u  b3V0cHV0L3B5dGhvbl8xNC5qc29u  b3V0cHV0L3B5dGhvbl8xNS5qc29u  b3V0cHV0L3B5dGhvbl8xNi5qc29u  b3V0cHV0L3B5dGhvbl8xNy5qc29u  b3V0cHV0L3B5dGhvbl8xOC5qc29u  b3V0cHV0L3B5dGhvbl8yLmpzb24=  b3V0cHV0L3B5dGhvbl8yMi5qc29u  b3V0cHV0L3B5dGhvbl8yMy5qc29u  b3V0cHV0L3B5dGhvbl8yNC5qc29u  b3V0cHV0L3B5dGhvbl8yNS5qc29u  b3V0cHV0L3B5dGhvbl8yOS5qc29u  b3V0cHV0L3B5dGhvbl8zLmpzb24=  b3V0cHV0L3B5dGhvbl8zMC5qc29u  b3V0cHV0L3B5dGhvbl8zMS5qc29u  b3V0cHV0L3Rlc3QuanNvbg==
example/output/: python.json  python_0.json  python_1.json  python_10.json  python_14.json  python_15.json  python_16.json  python_17.json  python_18.json  python_2.json  python_22.json  python_23.json  python_24.json  python_25.json  python_29.json  python_3.json  python_30.json  python_31.json  python_7.json  python_8.json  python_9.json
example/scripts/: test.py
example/snakemake/: common.smk  config.yaml
examples/dev/: .gitignore  pyproject.toml
examples/pypi/: pyproject.toml  snakefile
python/: README.md  pyproject.toml
python/snakemake-utils/: auto.py  interact.py
python/snakemakehelpers/: interact.py
python/snakemakeutils/: auto.py  interact.py
