[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Nikolas Siccha <nikolassiccha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
snakemakeutils = { git = "git@github.com:nsiccha/snakemakeutils.git", subdirectory = "python" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
