[tool.poetry]
name = "pypi"
version = "0.1.0"
description = ""
authors = ["Nikolas Siccha <nikolas.siccha@aalto.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
snakemakehelpers = { git = "git@github.com:nsiccha/snakemakehelpers.git", subdirectory = "python" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
